# sfml-projects

2048/: CMakeLists.txt  main.cpp
2048/include/: Block.h  Board.h  Game.h
2048/src/: Block.cpp  Board.cpp  Game.cpp
BaaghChaal/: Makefile  README.org
BaaghChaal/include/: Baagh.h  Baakhra.h  Board.h  Game.h
BaaghChaal/src/: Baagh.cpp  Baakhra.cpp  Board.cpp  Game.cpp  main.cpp
Double_Pendulum/: Makefile  main.cpp
Double_Pendulum/include/: Pendulum.h
Double_Pendulum/src/: Pendulum.cpp
Game_Of_Life/: Makefile
Game_Of_Life/include/: Game.h  Life.h
Game_Of_Life/src/: Game.cpp  Life.cpp  main.cpp
Revolving_Balls/: CMakeLists.txt  main.cpp
Revolving_Balls/.cache/clangd/index/: main.cpp.5705B9AF5727301F.idx
Snake/: Makefile  main.cpp
Snake/.cache/clangd/index/: Snake.h.F17326EBA600268A.idx  (+1 more)
Snake/include/: Snake.h  Textbox.hpp
Snake/src/: Snake.cpp
Tetris/: CMakeLists.txt  main.cpp
Tetris/Header/: Board.hpp  Game.hpp  Piece.hpp  Stats.hpp  random.hpp
Tetris/Source/: Board.cpp  Game.cpp  Piece.cpp  Stats.cpp
TicTacToe/: Makefile  main.cpp
TicTacToe/include/: Board.h
TicTacToe/src/: Board.cpp
algorithms_visualization/: CMakeLists.txt  bubble_sort.cpp  insertion_sort.cpp  merge_sort.cpp  selection_sort.cpp  shell_sort.cpp
sf_utilities/: CMakeLists.txt  README.md  demo.cpp
sf_utilities/Button/: Button.cpp
sf_utilities/Textbox/: Textbox.cpp
srms/: Makefile  main.cpp
srms/include/: Application.hpp  Button.hpp  Graphics.hpp  Students.hpp  Textbox.hpp
srms/src/: Application.cpp  Button.cpp  Graphics.cpp  Students.cpp  Textbox.cpp
(+3 files in other folders)
